--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!--Home section-->
     <section class="home" id="home">
         <div class="social">
-            <a href=""><i class="bx bxl-github"></i></a>
+            <a href="https://github.com/Felipe305"><i class="bx bxl-github"></i></a>
             <a href=""><i class="bx bxl-dribbble"></i></a>
             <a href=""><i class="bx bxl-behance"></i></a>
         </div>
@@ -133,7 +133,42 @@
         </div>
     </section>
 
+    <!--Service Box-->
 
+    <section class="services" id="services">
+        <div class="heading">
+            <h2>Service</h2>
+            <span>Our Services</span>
+        </div>
+
+        <div class="services-content">
+            <!--box-1-->
+            <div class="services-box">
+                <i class="bx bx-code-alt"></i>
+                <h3>Web Developement</h3>
+                <a href="">Learn More</a>
+            </div>
+            <!--box-2-->
+            <div class="services-box">
+                <i class="bx bx-server"></i>
+                <h3>Backend Developement</h3>
+                <a href="">Learn More</a>
+            </div>
+            <!--box-3-->
+            <div class="services-box">
+                <i class="bx bx-brush"></i>
+                <h3>UI/UX Design</h3>
+                <a href="">Learn More</a>
+            </div>
+            <!--box-4-->
+            <div class="services-box">
+                <i class="bx bxl-wordpress"></i>
+                <h3>Wordpress Developement</h3>
+                <a href="">Learn More</a>
+            </div>
+        </div>
+
+    </section>
 
     <!--js file-->
     <script src="./js/script.js"></script>
