--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 da criação e elaboração de projetos.
             </p>
             <!--contact button-->
-            <a href="" class="btn">Contact Me</a>
+            <a href="https://api.whatsapp.com/send?phone=5519992322181&text=Ol%C3%A1%20Felipe%2C%20tudo%20bem%3F" class="btn">Contact Me</a>
         </div>
 
     </section>
@@ -102,7 +102,7 @@
                     </div>
             </div>
             <!-- btn-->
-            <a href="" class="btn">Dowload CV</a>
+            <a href="./Felipe Silva.pdf" class="btn">Dowload CV</a>
             </div>
         </div>
     </section>
