--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Felipe</title>
     <!--favicon-->
-    <link rel="shortcut icon" href="profile.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="luminaria.png" type="image/x-icon">
     <!--CSS file-->
     <link rel="stylesheet" href="./css/style.css">
     <!--icon CDN link-->
